--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
-    "build": "rm -rf dist && tsc",
-    "test": "ts-node node_modules/tape/bin/tape src/**/*.test.ts"
+    "build": "npm run test && rm -rf dist && tsc",
+    "test": "tslint -p . && ts-node node_modules/tape/bin/tape src/**/*.test.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "nodemon": "^1.12.1",
     "tape": "^4.8.0",
     "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
     "typescript": "^2.6.1"
   }
 }
