--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bson": "^1.0.4",
     "@types/react": "^16.0.23",
     "@types/react-dom": "^16.0.3",
     "css-hot-loader": "^1.3.3",
@@ -33,6 +34,7 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "bson": "^1.0.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
   }
