--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -4,7 +4,13 @@
         "noImplicitAny": true,
         "module": "commonjs",
         "target": "es5",
-        "jsx": "react"
+        "jsx": "react",
+        "baseUrl": ".",
+        "paths": {
+            "shared/*": [
+                "../shared/src/*"
+            ]
+        }
     },
     "include": [
         "./src/**/*"
