--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,6 +9,9 @@
         "paths": {
             "shared/*": [
                 "../shared/src/*"
+            ],
+            "~/*": [
+                "src/*"
             ]
         }
     },
