--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -6,6 +6,7 @@
         "target": "es5",
         "jsx": "react",
         "baseUrl": ".",
+        "pretty": true,
         "paths": {
             "shared/*": [
                 "../shared/src/*"
