--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,6 +6,7 @@
         "target": "es2017",
         "outDir": "dist",
         "baseUrl": ".",
+        "pretty": true,
         "paths": {
             "shared/*": [
                 "../shared/src/*"
