--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/bson": "^1.0.4",
     "@types/react": "^16.0.23",
     "@types/react-dom": "^16.0.3",
+    "copy-webpack-plugin": "^4.2.3",
     "css-hot-loader": "^1.3.3",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
