--- a/app/package.json
+++ b/app/package.json
@@ -15,11 +15,13 @@
   "devDependencies": {
     "@types/bson": "^1.0.4",
     "@types/react": "^16.0.23",
+    "@types/react-bootstrap": "^0.31.8",
     "@types/react-dom": "^16.0.3",
     "copy-webpack-plugin": "^4.2.3",
     "css-hot-loader": "^1.3.3",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.6.1",
     "react-hot-loader": "^3.1.3",
@@ -31,12 +33,15 @@
     "tslint-react": "^3.2.0",
     "tslint-webpack-plugin": "^1.0.0",
     "typescript": "^2.6.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "bson": "^1.0.4",
     "react": "^16.1.1",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1"
   }
 }
