--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.6.1",
+    "react-contextmenu": "^2.9.0",
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.3",
