--- a/app/package.json
+++ b/app/package.json
@@ -5,15 +5,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --content-base src/",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bson": "^1.0.4",
+    "@types/jest": "^21.1.8",
     "@types/react": "^16.0.23",
     "@types/react-bootstrap": "^0.31.8",
     "@types/react-dom": "^16.0.3",
@@ -23,12 +24,14 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
     "node-sass": "^4.6.1",
     "react-contextmenu": "^2.9.0",
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
+    "ts-jest": "^21.2.4",
     "ts-loader": "^3.1.1",
     "tslint": "^5.8.0",
     "tslint-react": "^3.2.0",
