--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^16.0.23",
     "@types/react-bootstrap": "^0.31.8",
     "@types/react-dom": "^16.0.3",
+    "@types/react-split-pane": "^0.1.10",
     "copy-webpack-plugin": "^4.2.3",
     "css-hot-loader": "^1.3.3",
     "css-loader": "^0.28.7",
@@ -28,6 +29,7 @@
     "node-sass": "^4.6.1",
     "react-contextmenu": "^2.9.0",
     "react-hot-loader": "^3.1.3",
+    "react-split-pane": "^0.1.71",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
