webpack dev and prod builds

--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --content-base src/",
-    "build": "webpack",
+    "start": "webpack-dev-server --content-base src/ --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "test": "jest"
   },
   "keywords": [],
@@ -19,6 +19,8 @@
     "@types/react-bootstrap": "^0.31.8",
     "@types/react-dom": "^16.0.3",
     "@types/react-split-pane": "^0.1.10",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
+    "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.3",
     "css-hot-loader": "^1.3.3",
     "css-loader": "^0.28.7",
@@ -28,6 +30,7 @@
     "jest": "^21.2.1",
     "node-sass": "^4.6.1",
     "react-contextmenu": "^2.9.0",
+    "react-dev-utils": "^4.2.1",
     "react-hot-loader": "^3.1.3",
     "react-split-pane": "^0.1.71",
     "sass-loader": "^6.0.6",
@@ -39,9 +42,11 @@
     "tslint-react": "^3.2.0",
     "tslint-webpack-plugin": "^1.0.0",
     "typescript": "^2.6.1",
+    "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "webpack-merge": "^4.1.1"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
