--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@types/react-split-pane": "^0.1.10",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "clean-webpack-plugin": "^0.1.17",
+    "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "css-hot-loader": "^1.3.3",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
