--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^16.0.23",
     "@types/react-bootstrap": "^0.31.8",
     "@types/react-dom": "^16.0.3",
+    "@types/react-hot-loader": "^3.0.5",
     "@types/react-split-pane": "^0.1.10",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "clean-webpack-plugin": "^0.1.17",
