--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -22,6 +22,9 @@
             ],
             "@app/*": [
                 "src/*"
+            ],
+            "@assets/*": [
+                "src/assets/*"
             ]
         }
     },
