--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bson": "^1.0.6",
+    "@types/express": "^4.11.0",
     "@types/geoip-lite": "^1.1.29",
     "@types/jest": "^21.1.8",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^8.5.1",
     "@types/ws": "^3.2.1",
     "jest": "^21.2.1",
@@ -27,7 +29,9 @@
   },
   "dependencies": {
     "bson": "^1.0.4",
+    "express": "^4.16.2",
     "geoip-lite": "^1.2.1",
+    "morgan": "^1.9.0",
     "ws": "^3.3.2"
   }
 }
