--- a/server/package.json
+++ b/server/package.json
@@ -13,25 +13,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bson": "^1.0.6",
-    "@types/express": "^4.11.0",
+    "@types/bson": "^1.0.8",
+    "@types/express": "^4.11.1",
     "@types/geoip-lite": "^1.1.29",
-    "@types/jest": "^22.0.1",
+    "@types/jest": "^22.2.3",
     "@types/morgan": "^1.7.35",
-    "@types/node": "^9.3.0",
-    "@types/ws": "^4.0.0",
-    "jest": "^22.1.4",
-    "nodemon": "^1.13.3",
-    "ts-jest": "^22.0.1",
-    "ts-node": "^4.1.0",
+    "@types/node": "^10.0.0",
+    "@types/ws": "^4.0.2",
+    "jest": "^22.4.3",
+    "nodemon": "^1.17.3",
+    "ts-jest": "^22.4.4",
+    "ts-loader": "^4.2.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.8.3",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "bson": "^1.0.4",
-    "express": "^4.16.2",
+    "bson": "^2.0.6",
+    "express": "^4.16.3",
     "geoip-lite": "^1.2.1",
     "morgan": "^1.9.0",
-    "ws": "^4.0.0"
+    "ws": "^5.1.1"
   }
 }
