--- a/app/package.json
+++ b/app/package.json
@@ -13,46 +13,39 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bson": "^1.0.6",
-    "@types/jest": "^22.1.2",
-    "@types/react": "^16.0.36",
-    "@types/react-bootstrap": "^0.32.2",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-hot-loader": "^3.0.5",
-    "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "clean-webpack-plugin": "^0.1.18",
+    "@types/bson": "^1.0.8",
+    "@types/jest": "^22.2.3",
+    "@types/react": "^16.3.13",
+    "@types/react-bootstrap": "^0.32.9",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-hot-loader": "^4.1.0",
+    "babel-loader": "^7.1.4",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
-    "css-hot-loader": "^1.3.6",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.2.2",
-    "node-sass": "^4.7.2",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
+    "node-sass": "^4.9.0",
     "react-contextmenu": "^2.9.1",
-    "react-dev-utils": "^5.0.0",
-    "react-hot-loader": "^3.1.3",
-    "react-split-pane": "^0.1.71",
-    "sass-loader": "^6.0.6",
-    "source-map-loader": "^0.2.3",
-    "style-loader": "^0.20.1",
-    "ts-jest": "^22.0.3",
-    "ts-loader": "^3.5.0",
+    "react-hot-loader": "^4.1.2",
+    "react-split-pane": "^0.1.77",
+    "sass-loader": "^7.0.1",
+    "ts-jest": "^22.4.4",
+    "ts-loader": "^4.2.0",
     "tslint": "^5.8.0",
-    "tslint-react": "^3.2.0",
-    "tslint-webpack-plugin": "^1.1.1",
-    "typescript": "^2.7.1",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+    "tslint-react": "^3.5.1",
+    "typescript": "^2.8.3",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "bson": "^1.0.4",
-    "react": "^16.2.0",
+    "bootstrap": "^4.1.0",
+    "bson": "^2.0.6",
+    "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.3.2"
   }
 }
