--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@types/react-bootstrap": "^0.32.9",
     "@types/react-dom": "^16.0.5",
     "@types/react-hot-loader": "^4.1.0",
+    "@types/react-router": "^4.0.24",
     "babel-loader": "^7.1.4",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "file-loader": "^1.1.11",
@@ -46,6 +47,7 @@
     "bson": "^2.0.6",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-router": "^4.2.0"
   }
 }
