--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@types/react-bootstrap": "^0.32.9",
     "@types/react-dom": "^16.0.5",
     "@types/react-hot-loader": "^4.1.0",
+    "@types/react-redux": "^5.0.19",
     "@types/react-router": "^4.0.24",
     "babel-loader": "^7.1.4",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
@@ -32,6 +33,7 @@
     "ts-jest": "^22.4.4",
     "ts-loader": "^4.2.0",
     "tslint": "^5.8.0",
+    "tslint-plugin-prettier": "^1.3.0",
     "tslint-react": "^3.5.1",
     "typescript": "^2.8.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
@@ -47,6 +49,8 @@
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
-    "react-router": "^4.2.0"
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "redux": "^4.0.0"
   }
 }
