--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,34 +1,19 @@
 {
-    "compilerOptions": {
-        "sourceMap": true,
-        "noImplicitAny": true,
-        "module": "commonjs",
-        "target": "es2017",
-        "jsx": "react",
-        "baseUrl": ".",
-        "pretty": true,
-        "paths": {
-            "@shared/*": [
-                "../shared/src/*"
-            ],
-            "@messages/*": [
-                "src/messages/*"
-            ],
-            "@templates": [
-                "../shared/src/templates/index"
-            ],
-            "@components/*": [
-                "src/components/*"
-            ],
-            "@app/*": [
-                "src/*"
-            ],
-            "@assets/*": [
-                "src/assets/*"
-            ]
-        }
-    },
-    "include": [
-        "./src/**/*"
-    ]
+  "compilerOptions": {
+    "sourceMap": true,
+    "module": "commonjs",
+    "target": "es2017",
+    "jsx": "react",
+    "baseUrl": ".",
+    "pretty": true,
+    "paths": {
+      "@shared/*": ["../shared/src/*"],
+      "@messages/*": ["src/messages/*"],
+      "@templates": ["../shared/src/templates/index"],
+      "@components/*": ["src/components/*"],
+      "@app/*": ["src/*"],
+      "@assets/*": ["src/assets/*"]
+    }
+  },
+  "include": ["./src/**/*"]
 }
