--- a/app/package.json
+++ b/app/package.json
@@ -27,12 +27,14 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "node-sass": "^4.9.0",
+    "prettier": "^1.12.1",
     "react-contextmenu": "^2.9.1",
     "react-hot-loader": "^4.1.2",
     "sass-loader": "^7.0.1",
     "ts-jest": "^22.4.4",
     "ts-loader": "^4.2.0",
     "tslint": "^5.8.0",
+    "tslint-config-prettier": "^1.12.0",
     "tslint-plugin-prettier": "^1.3.0",
     "tslint-react": "^3.5.1",
     "typescript": "^2.8.3",
