--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^5.0.19",
     "@types/react-router": "^4.0.24",
+    "@types/recompose": "^0.26.1",
     "babel-loader": "^7.1.4",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "file-loader": "^1.1.11",
@@ -53,6 +54,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "recompose": "^0.27.0",
     "redux": "^4.0.0"
   }
 }
