--- a/app/package.json
+++ b/app/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "recompose": "^0.27.0",
     "redux": "^4.0.0"
   }
