--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@types/ws": "^4.0.2",
     "jest": "^22.4.3",
     "nodemon": "^1.17.3",
+    "prettier": "^1.12.1",
     "ts-jest": "^22.4.4",
     "ts-loader": "^4.2.0",
     "tslint": "^5.8.0",
