--- a/app/package.json
+++ b/app/package.json
@@ -59,6 +59,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.27.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "shared": "file:../shared"
   }
 }
