--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "express": "^4.16.3",
     "geoip-lite": "^1.2.1",
     "morgan": "^1.9.0",
-    "ws": "^5.1.1"
+    "ws": "^5.1.1",
+    "shared": "file:../shared"
   }
 }
