--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "@types/react-redux": "^5.0.19",
     "@types/react-router": "^4.0.24",
     "@types/recompose": "^0.26.1",
+    "@types/redux-actions": "^2.2.4",
     "babel-loader": "^7.1.4",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "file-loader": "^1.1.11",
@@ -60,6 +61,7 @@
     "react-router-dom": "^4.2.2",
     "recompose": "^0.27.0",
     "redux": "^4.0.0",
+    "redux-actions": "^2.3.0",
     "shared": "file:../shared"
   }
 }
