--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bson": "^1.0.8",
+    "@types/debug": "^0.0.30",
     "@types/express": "^4.11.1",
     "@types/geoip-lite": "^1.1.29",
     "@types/jest": "^22.2.3",
@@ -36,10 +37,13 @@
   },
   "dependencies": {
     "bson": "^2.0.6",
+    "chalk": "^2.4.1",
+    "debug": "^3.1.0",
     "express": "^4.16.3",
     "geoip-lite": "^1.2.1",
     "morgan": "^1.9.0",
-    "ws": "^5.1.1",
-    "shared": "file:../shared"
+    "shared": "file:../shared",
+    "supports-color": "^5.4.0",
+    "ws": "^5.1.1"
   }
 }
