--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
     "clean": "rm -rf dist/",
     "start": "nodemon",
     "build": "yarn run clean && webpack --mode=production",
+    "build:native": "yarn run build && pkg dist/index.js --out-path dist/",
+    "build:natives": "yarn run build && pkg dist/index.js -t latest-win-x64,latest-linux-x64,latest-linux-armv7,latest-macos-x64 --out-path dist/",
     "test": "jest"
   },
   "keywords": [],
@@ -23,6 +25,7 @@
     "@types/ws": "^4.0.2",
     "jest": "^22.4.3",
     "nodemon": "^1.17.3",
+    "pkg": "^4.3.1",
     "prettier": "^1.12.1",
     "ts-jest": "^22.4.4",
     "ts-loader": "^4.2.0",
