enable --no-unused-locals on server

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "removeComments": true,
+        "noUnusedLocals": true,
         "module": "commonjs",
         "target": "es2015",
         "baseUrl": ".",
