app --no-unused-locals

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "sourceMap": true,
+    "removeComments": true,
+    "noUnusedLocals": true,
     "module": "commonjs",
     "target": "es2017",
     "jsx": "react",
