--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^10.0.0",
     "@types/node-forge": "^0.7.2",
     "@types/ws": "^4.0.2",
+    "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "jest": "^22.4.3",
     "nodemon": "^1.17.3",
     "pkg": "^4.3.1",
