--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^22.2.3",
     "@types/node": "^10.0.0",
     "@types/node-forge": "^0.7.2",
+    "@types/tmp": "^0.0.33",
     "@types/ws": "^4.0.2",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "jest": "^22.4.3",
@@ -48,6 +49,7 @@
     "node-forge": "^0.7.5",
     "shared": "file:../shared",
     "supports-color": "^5.4.0",
+    "tmp": "^0.0.33",
     "ws": "^5.1.1"
   }
 }
