--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "tslint --fix ./src/**/*.ts"
   },
   "keywords": [],
   "author": "",
