--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.16.0",
     "@types/geoip-lite": "^1.1.29",
     "@types/jest": "^23.0.0",
+    "@types/lodash.throttle": "^4.1.3",
     "@types/node": "^10.3.2",
     "@types/node-forge": "^0.7.4",
     "@types/tmp": "^0.0.33",
@@ -47,6 +48,7 @@
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "geoip-lite": "^1.2.1",
+    "lodash.throttle": "^4.1.1",
     "node-forge": "^0.7.5",
     "shared": "file:../shared",
     "supports-color": "^5.4.0",
