use absolute paths in imports

--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -6,15 +6,6 @@
       "es2017",
       "dom"
     ],
-    "jsx": "react",
-    "baseUrl": ".",
-    "paths": {
-      "~/*": [
-        "src/*"
-      ],
-      "assets/*": [
-        "src/assets/*"
-      ]
-    }
+    "jsx": "react"
   }
 }
