app: setup assets resolving

--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -6,6 +6,12 @@
       "es2017",
       "dom"
     ],
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "assets/*": [
+        "src/assets/*"
+      ]
+    }
   }
 }
