--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -26,6 +26,7 @@
     "@types/recompose": "^0.26.1",
     "@types/redux-actions": "^2.3.0",
     "babel-loader": "^7.1.4",
+    "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
