--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -17,9 +17,9 @@
     "@types/bson": "^1.0.8",
     "@types/bytes": "^3.0.0",
     "@types/jest": "^23.0.0",
-    "@types/react": "^16.3.17",
+    "@types/react": "16.8.14",
     "@types/react-bootstrap": "^0.32.9",
-    "@types/react-dom": "^16.0.6",
+    "@types/react-dom": "^16.8.4",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^6.0.2",
     "@types/react-router": "^4.0.26",
@@ -27,6 +27,7 @@
     "@types/redux-actions": "^2.3.0",
     "babel-loader": "^7.1.4",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
+    "css-loader": "^2.1.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
@@ -34,6 +35,7 @@
     "prettier": "^1.13.4",
     "react-hot-loader": "^4.3.0",
     "sass-loader": "^7.0.3",
+    "style-loader": "^0.23.1",
     "ts-jest": "^22.4.6",
     "ts-loader": "^4.3.1",
     "tslint": "^5.10.0",
@@ -55,15 +57,16 @@
     "emotion": "9.1.2",
     "emotion-theming": "^9.2.4",
     "flag-icons": "^1.0.2",
-    "react": "^16.4.0",
+    "react": "^16.8.6",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.8.6",
     "react-emotion": "9.1.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
-    "shared": "*"
+    "shared": "*",
+    "xterm": "^3.12.2"
   }
 }
