--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,3 +29,7 @@
 [[constraint]]
   name = "github.com/xtaci/smux"
   version = "1.2.6"
+
+[[constraint]]
+  name = "github.com/pierrec/lz4"
+  version = "2.2.3"
