--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -57,6 +57,7 @@
     "emotion": "9.1.2",
     "emotion-theming": "^9.2.4",
     "flag-icons": "^1.0.2",
+    "lz4-asm": "^0.3.3",
     "react": "^16.8.6",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.8.6",
