--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config packages/app/webpack.dev.js",
-    "build": "webpack --config packages/app/webpack.prod.js",
+    "start": "cd packages/app && webpack-dev-server --config webpack.dev.js",
+    "build": "cd packages/app && webpack --config webpack.prod.js",
     "test": "cd packages/app && jest",
-    "lint": "tslint --fix ./packages/app/src/**/*.ts"
+    "lint": "cd packages/app && tslint --fix ./src/**/*.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.6.0",
     "@types/bson": "^1.0.8",
     "@types/bytes": "^3.0.0",
-    "@types/jest": "^23.0.0",
+    "@types/jest": "^24.0.18",
     "@types/react": "16.8.14",
     "@types/react-bootstrap": "^0.32.9",
     "@types/react-dom": "^16.8.4",
@@ -25,22 +33,23 @@
     "@types/react-router": "^4.0.26",
     "@types/recompose": "^0.26.1",
     "@types/redux-actions": "^2.3.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^3.2.0",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "css-loader": "^2.1.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.1.0",
+    "jest": "^24.9.0",
     "prettier": "^1.13.4",
     "react-hot-loader": "^4.3.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.23.1",
-    "ts-jest": "^22.4.6",
+    "ts-jest": "^24.1.0",
     "ts-loader": "^4.3.1",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-plugin-prettier": "^1.3.0",
-    "tslint-react": "^3.6.0",
+    "tslint-react": "^4.0.0",
     "typescript": "^2.9.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
@@ -53,6 +62,7 @@
     "bootstrap": "^4.1.1",
     "bson": "^2.0.6",
     "bytes": "^3.0.0",
+    "core-js": "^3.2.1",
     "emotion": "9.1.2",
     "emotion-theming": "^9.2.4",
     "flag-icons": "^1.0.2",
