--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,5 @@ matrix:
       node_js: node
       install: npm i
       script:
-        # - npm run test
-        # - npm run build
+        - npm run test
+        - npm run build
