--- a/package.json
+++ b/package.json
@@ -1,13 +1,82 @@
 {
+  "name": "app",
   "private": true,
-	"devDependencies": {
-		"lerna": "^2.11.0"
-  },
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "bootstrap": "lerna bootstrap",
-    "build": "lerna run build"
+    "start": "cd packages/app && webpack-dev-server --config webpack.dev.js",
+    "build": "cd packages/app && webpack --config webpack.prod.js",
+    "test": "cd packages/app && jest",
+    "lint": "cd packages/app && tslint --fix ./src/**/*.ts"
   },
-  "workspaces": [
-    "packages/*"
-  ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.6.0",
+    "@types/bson": "^1.0.8",
+    "@types/bytes": "^3.0.0",
+    "@types/jest": "^24.0.18",
+    "@types/react": "16.8.14",
+    "@types/react-bootstrap": "^0.32.9",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-redux": "^6.0.2",
+    "@types/react-router": "^4.0.26",
+    "@types/recompose": "^0.26.1",
+    "@types/redux-actions": "^2.3.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
+    "css-loader": "^2.1.1",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "prettier": "^1.13.4",
+    "react-hot-loader": "^4.3.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.23.1",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^4.3.1",
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.13.0",
+    "tslint-plugin-prettier": "^1.3.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "^2.9.1",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.11.1",
+    "webpack-cli": "^3.0.3",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.1",
+    "bson": "^2.0.6",
+    "bytes": "^3.0.0",
+    "core-js": "^3.2.1",
+    "emotion": "9.1.2",
+    "emotion-theming": "^9.2.4",
+    "flag-icons": "^1.0.2",
+    "lz4-asm": "^0.3.3",
+    "react": "^16.8.6",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.8.6",
+    "react-emotion": "9.1.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "recompose": "^0.27.1",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.4.0",
+    "shared": "*",
+    "xterm": "^3.12.2"
+  }
 }
