--- a/package.json
+++ b/package.json
@@ -25,32 +25,33 @@
     "@types/bson": "^1.0.8",
     "@types/bytes": "^3.0.0",
     "@types/jest": "^24.0.18",
-    "@types/react": "16.8.14",
+    "@types/react": "16.9.5",
     "@types/react-bootstrap": "^0.32.9",
     "@types/react-dom": "^16.8.4",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^6.0.2",
-    "@types/react-router": "^4.0.26",
+    "@types/react-router": "^5.1.1",
     "@types/recompose": "^0.26.1",
     "@types/redux-actions": "^2.3.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
-    "css-loader": "^2.1.1",
-    "file-loader": "^1.1.11",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "prettier": "^1.13.4",
     "react-hot-loader": "^4.3.0",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.23.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "ts-jest": "^24.1.0",
     "ts-loader": "^4.3.1",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-plugin-prettier": "^1.3.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^2.9.1",
+    "typescript": "^3.6.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.11.1",
@@ -72,11 +73,12 @@
     "react-dom": "^16.8.6",
     "react-emotion": "9.1.2",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.1.2",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
     "shared": "*",
-    "xterm": "^3.12.2"
+    "xterm": "^4.0.2",
+    "xterm-addon-fit": "^0.2.1"
   }
 }
