--- a/package.json
+++ b/package.json
@@ -22,16 +22,15 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
-    "@types/bson": "^1.0.8",
+    "@types/bson": "^4.0.0",
     "@types/bytes": "^3.0.0",
     "@types/jest": "^24.0.18",
     "@types/react": "16.9.5",
-    "@types/react-bootstrap": "^0.32.9",
     "@types/react-dom": "^16.8.4",
     "@types/react-hot-loader": "^4.1.0",
-    "@types/react-redux": "^6.0.2",
+    "@types/react-redux": "^7.1.4",
     "@types/react-router": "^5.1.1",
-    "@types/recompose": "^0.26.1",
+    "@types/recompose": "^0.30.7",
     "@types/redux-actions": "^2.3.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
@@ -49,11 +48,11 @@
     "ts-loader": "^4.3.1",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
-    "tslint-plugin-prettier": "^1.3.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^4.0.0",
     "typescript": "^3.6.3",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^2.2.0",
     "webpack": "^4.11.1",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.3.1",
@@ -61,22 +60,22 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.1",
-    "bson": "^2.0.6",
+    "bson": "^4.0.2",
     "bytes": "^3.0.0",
     "core-js": "^3.2.1",
     "emotion": "9.1.2",
     "emotion-theming": "^9.2.4",
-    "flag-icons": "^1.0.2",
+    "flag-icons": "^2.0.0",
     "javascript-time-ago": "^2.0.2",
     "lz4-asm": "^0.3.3",
     "path-browserify": "^1.0.0",
     "react": "^16.8.6",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.8.6",
     "react-emotion": "9.1.2",
-    "react-redux": "^5.0.7",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "recompose": "^0.27.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
     "shared": "*",
