--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@types/bson": "^4.0.0",
     "@types/bytes": "^3.0.0",
     "@types/jest": "^24.0.18",
-    "@types/react": "16.9.5",
-    "@types/react-dom": "^16.8.4",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.6",
     "@types/react-hot-loader": "^4.1.0",
-    "@types/react-redux": "^7.1.4",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.1",
     "@types/recompose": "^0.30.7",
     "@types/redux-actions": "^2.3.0",
@@ -66,17 +66,18 @@
     "emotion": "9.1.2",
     "emotion-theming": "^9.2.4",
     "flag-icons": "^2.0.0",
+    "hoist-non-react-statics": "^3.3.2",
     "javascript-time-ago": "^2.0.2",
     "lz4-asm": "^0.3.3",
     "path-browserify": "^1.0.0",
-    "react": "^16.8.6",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.13.1",
     "react-emotion": "9.1.2",
-    "react-redux": "^7.1.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "recompose": "^0.30.0",
-    "redux": "^4.0.0",
+    "redux": "^4.0.5",
     "redux-actions": "^2.4.0",
     "shared": "*",
     "xterm": "^4.0.2",
